test/fail/module.app
//Main .app file needs to start with "application"
module test